# petal

./: Cargo.toml  cargo.toml  readme.md
crates/lexing_playground/: Cargo.toml
crates/lexing_playground/src/: parser.rs
crates/petal_parser/: Cargo.toml
crates/petal_parser/src/: main.rs  parser.rs
crates/petal_parser/src/parser/: expression.rs  function.rs  module.rs  statement.rs  types.rs
crates/swc_petal_ast/: Cargo.toml
crates/swc_petal_ast/src/: _es_type_annotation.rs  es_ts_ast_interop.rs  es_type_annotation.rs  lib.rs
crates/swc_petal_ecma_visit/: Cargo.toml
crates/swc_petal_ecma_visit/scripts/: update.sh
crates/swc_petal_ecma_visit/src/: lib.rs
crates/swc_petal_parser/: Cargo.toml
crates/swc_petal_parser/benches/: compare.rs  lexer.rs  parser.rs
crates/swc_petal_parser/examples/: lexer.rs  perf.rs  typescript.rs
crates/swc_petal_parser/src/: lib.rs  token.rs
crates/swc_petal_parser/src/lexer/: mod.rs  number.rs  util.rs
crates/swc_petal_parser/src/parser/: class_and_fn.rs  es_type_annotation.rs  mod.rs  pat.rs  stmt.rs  typescript.rs
crates/swc_petal_parser/tests/: comments.rs  errors.rs  jsx.rs  span.rs  test262.rs  typescript.rs  visitor.rs
crates/testing-ground/: Cargo.toml
crates/testing-ground/src/: lib.rs
crates/testing-ground/tests/fixtures/: test
docs/: grammar.md  notes.md  petal-ecosystem-and-overview.md  spec.md
grammar/: amended-grammar.md  ammended-grammar.md  complete-grammar.md  complete-petal-grammar.md  petal-grammar.diff  petal-types-grammar.md  readme.md
scripts/: grammar-diff.sh
src/: main.rs
src/parser/: ast.rs  lexer.integration.test.rs  lexer.rs  mod.rs  parser.rs  string_utils.rs  tokens.rs
tests/: lexer-fixture.js  lexer-integration-js.rs  lexer-integration-ts.rs  lexer-ts-fixture.ts  lexer.rs
(+5 files in other folders)
