[package]
authors = ["Dave Campion me@davecampion.com"]
description = "Petal Testing Ground Crate"
name = "testing-ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.24.0" }
swc_ecma_ast = { version = "0.85.0" }
swc_ecma_visit = { version = "0.71.0"}
swc_petal_parser = { path = "../swc_petal_parser" }
swc_macros_common = "0.3.6"